added the html code

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title> DRINK COUNTER!</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <h1>Drink Up!@</h1>
+    <h2>Goal: 2 Liters</h2>
+
+
+    <div class="cup">
+      <div class="remaining" id="remaining">
+        <span id="liters">1.5L</span>
+        <small>remaining</small>
+      </div>
+
+      <div class="percentage" id="percentage">20%</div>
+    </div>
+
+    <p class="text">Select how many glasses od water that you have drank</p>
+
+    <div class="cups">
+      <div class="cup cup-small full"> 250 ml</div>
+      <div class="cup cup-small full"> 250 ml</div>
+      <div class="cup cup-small"> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
