--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <div class="cup">
       <div class="remaining" id="remaining">
-        <span id="liters">1.5L</span>
+        <span id="liters"></span>
         <small>remaining</small>
       </div>
 
-      <div class="percentage" id="percentage">20%</div>
+      <div class="percentage" id="percentage"></div>
     </div>
 
     <p class="text">Select how many glasses od water that you have drank</p>
 
     <div class="cups">
-      <div class="cup cup-small full"> 250 ml</div>
-      <div class="cup cup-small full"> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
+      <div class="cup cup-small "> 250 ml</div>
       <div class="cup cup-small"> 250 ml</div>
       <div class="cup cup-small "> 250 ml</div>
       <div class="cup cup-small "> 250 ml</div>
